# AI-Reels

./: .gitignore  CONVENTIONS.md  Modelfile  README.md  batch_reels.py  batch_reels.py_header.txt  besuchen.md  build_highlight_spans.py  check_models.py  config.yaml  example.env  main.py  projekt_dokumentation.md  pyproject.toml  run_reel.sh  sermon_windows.yaml  srt_summarizer_local.py  video_highlight_pipeline.py  video_highlight_pipeline_smart.py
core/: artifacts.py  commands.py  config.py  prompts.py  time_utils.py
domains/highlights/: errors.py  models.py  parser.py
domains/llm/: errors.py  summarizer.py
domains/transcription/: processor.py
domains/video/: hardware.py  renderer.py
domains/vision/: tracker.py
tests/: test_artifacts.py  test_commands.py  test_config.py  test_hardware.py  test_highlight_parser.py  test_highlights_json.py  test_smoke_pipeline.py  test_time_utils.py
tests/fixtures/: sample.srt  sample_highlights.md
